changed read me

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Please regrade project 4 instead of project 5 for this project.
+
 This program was completed using pair programming.
 Partner: Fedor Nikolayev (fnikolay@ucsc.edu)
 Partner: Ryan Schreiber (rschreib@ucsc.edu)
@@ -10,11 +12,11 @@ must be reviewed by the partner. The object is to work
 together, learning from each other, not to divide the work into
 two pieces with each partner working on a different piece.
 
-Fedor Nikolayev spent 3 hours working alone.
-Ryan Schreiber spent 3 hours working alone.
-We spent 16 hours working together.
-Fedor Nikolayev spent 8 hours driving.
-Ryan Schreiber spent 8 hours driving.
+Fedor Nikolayev spent 4 hours working alone.
+Ryan Schreiber spent 4 hours working alone.
+We spent 20 hours working together.
+Fedor Nikolayev spent 10 hours driving.
+Ryan Schreiber spent 10 hours driving.
 
 Please grade the work submitted by rschreib@ucsc.edu
 and not the work submitted by fnikolay@ucsc.edu.
